# XGraphics

./: .replit  CMakeLists.txt  CONTRIBUTING.md  README.md  replit.nix  updateCPM.sh
.cache/replit/nix/: env.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
AbstractionLayer/: CMakeLists.txt
AbstractionLayer/include/backends/opengl/: opengl_renderer.h
AbstractionLayer/include/core/: api.h  window.h
AbstractionLayer/include/graphics/: renderer.h
AbstractionLayer/include/math/: vector.h
AbstractionLayer/libs/glad/include/glad/: glad.h
AbstractionLayer/libs/glad/src/: glad.c
AbstractionLayer/src/: window.c
AbstractionLayer/src/backends/opengl/: opengl_renderer.c
AbstractionLayer/src/core/: window.c
AbstractionLayer/src/graphics/: renderer.c
Application/: CMakeLists.txt
Application/src/: main.c
